// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldText 1`] = `
.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2 c3"
  >
    <div
      className=""
    >
      <input
        className="c4"
        id="thumbs-up"
        name="thumbsUp"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`A FieldText with an error validation aligned to the bottom 1`] = `
.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c5 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2 c3"
  >
    <div
      className=""
    >
      <input
        className="c4"
        id="thumbs-up"
        name="thumbsUp"
        type="text"
      />
    </div>
    <div
      className=""
    >
      <div
        className="c5"
      >
        This is an error
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldText with an error validation aligned to the left 1`] = `
.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c5 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2 c3"
  >
    <div
      className=""
    >
      <input
        className="c4"
        id="thumbs-up"
        name="thumbsUp"
        type="text"
      />
    </div>
    <div
      className=""
    >
      <div
        className="c5"
      >
        This is an error
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldText with an error validation aligned to the right 1`] = `
.c3 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c5 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2"
  >
    <div
      className=""
    >
      <input
        className="c3"
        id="thumbs-up"
        name="thumbsUp"
        type="text"
      />
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        This is an error
      </div>
    </div>
  </div>
</div>
`;

exports[`A required FieldText 1`] = `
.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c2 {
  color: #990F14;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="thumbs-up"
  >
    👍
    <span
      className="c2"
    >
       *
    </span>
  </label>
  <div
    className="c3 c4"
  >
    <div
      className=""
    >
      <input
        className="c5"
        id="thumbs-up"
        name="thumbsUp"
        required={true}
        type="text"
      />
    </div>
  </div>
</div>
`;
